--- a/templates/hello.html
+++ b/templates/hello.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
-    <h1>Hello World</h1>
+    {% if name %}
+        <h1>Hello {{ name }}</h1>
+    {% else %}
+        <h1>Hello World</h1>
+    {% endif %}
 </body>
 
 </html>
